--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js",
     "server": "nodemon src/server.js",
     "client": "yarn --cwd client/ start",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\""
+    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --cwd client/ install && yarn --cwd client/ run build"
   },
   "author": "Emily Beissner",
   "license": "MIT",
