--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "server": "nodemon src/server.js",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "yarn --cwd client/ start",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --cwd client/ install && yarn --cwd client/ run build"
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
   },
   "author": "Emily Beissner",
   "license": "MIT",
